--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <button class="daily-quotes"><a href="https://focusforge-daily-quotes.netlify.app/">Daily-Quotes</a></button>
         </div>
         <div class="content-right">
-            <img src="/images/example-12.png" alt="image">
+            <img src="example-12.png" alt="image">
         </div>
     </main>
     <h2>What is <span class="abt-heading">FocusForge?</span></h2>
       <!--About Section-->
       <section id="about">
         <div class="about-left">
-            <img src="/images/example-7.png" alt="image">
+            <img src="example-7.png" alt="image">
         </div>
         <div class="about-right">
             <h3>About Us</h3>
@@ -48,7 +48,7 @@
     </section>
     <section id="quote-section">
         <div class="quote-left">
-            <img src="/images/cup_object.png" alt="image">
+            <img src="cup_object.png" alt="image">
         </div>
         <div class="quote-right">
             <p>Start your day with a dose of motivation. Our daily quote feature delivers wisdom and inspiration to uplift your spirits and fuel your productivity.</p>
